<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dibbler</string>
    <string name="facebook_app_id">611481392286903</string>
    <string name="title_activity_view_events">Events near you</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_fragment_view_map_events">Map</string>
    <string name="title_fragment_view_list_events">List</string>

    <string name="menu_search">Search events</string>

    <!-- Init texts -->
    <string name="init_initializing">Initializing...</string>
    <string name="init_fetch_position">Getting position</string>
    <string name="init_fetch_events">Getting events near you</string>

    <!-- Details -->
    <string name="details">Details</string>
    <string name="detail_location_and_contact">Location &amp; Contact</string>
    <string name="detail_view">Detail View</string>
    <string name="open_detail_view">Open Detail View</string>
    <string name="details_text_tmp">Ex sale exerci iracundia vel, fabulas definitionem vis ut. Quo ei intellegam omittantur, vis perfecto moderatius an. Ex omnis doming nec, gubergren sadipscing ius te, quo at ludus rationibus. Vocent molestie pro cu, est ponderum apeirian ut. Ut omnium laboramus comprehensam sit, option corpora ut qui. Ea dicat albucius duo, quo saperet nonumes expetenda cu, ludus dolor fabellas ut mei.</string>
    <string name="details_location_tmp">Såggatan 50A, 41467, Göteborg</string>
    <string name="details_contact_tmp">+46730-221122</string>
    <string name="details_website_tmp">www.awesome.com</string>
    <string name="details_previous">Previous</string>
    <string name="details_next">Next</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="action_sign_out">Sign out</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log in</string>
    <string name="pick_account">You must allow the app to sign in to your google+ account</string>
    <string name="user_info">You are logged in</string>
    <string name="user_info_email">Email</string>
    <string name="user_info_name">Name</string>
    <string name="user_info_id">Id</string>
    <string name="user_info_gender">Gender</string>

</resources>
