<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_gray"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/view_event_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/details_text_tmp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/detail_location_and_contact"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/event_detail_location_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_place" />

            <TextView
                android:id="@+id/view_event_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_location_tmp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/event_detail_contact_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_phone" />

            <TextView
                android:id="@+id/view_event_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_contact_tmp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/event_detail_website_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_web_site" />

            <TextView
                android:id="@+id/view_event_detail_web_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_website_tmp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>